--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,8 +20,10 @@ staleLabel: brak_odpowiedzi
 markComment: >
   W tym wątku nie pojawiła się żadna nowa odpowiedź w ciągu 7 dni. Dlatego automatycznie oznaczamy go jako przeterminowany. 
   Jeśli w ciągu kolejnych 7 dni nie pojawi się żadna odpowiedź, zamkniemy ten wątek.
-  Dziękujemy za zaangażowanie w dyskusję. Jednocześnie zachęcamy Cię do wypełnienia [ankiety](https://docs.google.com/forms/d/1CYjSAQoHzudrGOrI8Bmb8HJzgyy4MZut5aAacitYkFw). 
-  Podziel się z Nami swoimi spostrzeżeniami. Co możemy robić lepiej ? Chcemy, abyś był w pełni zadowolony z naszej obsługi forum Allegro API. 
+  Dziękujemy za zaangażowanie w dyskusję. Jednocześnie zachęcamy Cię do wypełnienia [ankiety](https://docs.google.com/forms/d/1CYjSAQoHzudrGOrI8Bmb8HJzgyy4MZut5aAacitYkFw).
+  ------
+  There was no new reply in this thread within 7 days. Therefore, we automatically marked it as expired. If no response is received within the next 7 days, we will close this thread. 
+  Thank you for engaging in the discussion. At the same time, we encourage you to complete [the survey](https://docs.google.com/forms/d/1ewSE9w07tNyvi8LTTDue54Y1tI5p5Sog_loevheEbRM)
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: false
 only: issues
